<resources>
    <string name="app_name">Hairfie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="intro_text_1"><![CDATA[Find Haircuts & Hairstyles and take inspiration from people like you]]></string>
    <string name="intro_text_2">Find and book the Hairdresser you need. Anywhere. Anytime.</string>
    <string name="intro_text_3"><![CDATA[Keep & Share inspiring Hairfies]]></string>
    <string name="or_skip_for_now">or skip for now</string>
    <string name="title_activity_signup">SIGN UP</string>
    <string name="validate">Validate</string>
    <string name="add_photo">Add Photo</string>
    <string name="civility">Civility</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="subscribe_to_the_newsletter">Subscribe to the newsletter</string>
    <string name="please_choose">Please choose</string>
    <string name="retry">Retry</string>
    <string name="sending">Sending</string>
    <string name="all_fields_are_mandatory">All fields are mandatory</string>
    <string name="facebook_app_id" translatable="false">726709544031609</string>
    <string name="email_permission_required">We need your E-mail address to log you into Hairfie!</string>
    <string name="title_activity_login">Login</string>
    <string name="accept_terms">By clicking here, I accept terms and conditions.</string>
    <string name="or_separator">–––––––––– or –––––––––––</string>
    <string name="dont_worry_facebook">Don\'t worry, we don\'t publish anything automatically</string>
    <string name="please_enter_email">Please enter your E-mail and your password!</string>
    <string name="logging_in">Logging in</string>
    <string name="filter_your_search">Filter your search</string>
    <string name="book">Book</string>
    <string name="hairfies">Hairfies</string>
    <string name="new_hairfie">New Hairfie</string>
    <string name="forgotten">forgotten?</string>
    <string name="title_activity_forgot_password">Forgotten password</string>
    <string name="enter_your_email_below">Enter your email below:</string>
    <string name="reset_password">Reset password</string>
    <string name="check_your_email">Check your email!</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="copyright_version">© Hairfie 2015 v1.0</string>
    <string name="title_activity_search_results">Find your hairdresser</string>
    <string name="find_your_hairdresser">Find your hairdresser</string>
    <string name="one_hairfie">1 hairfie</string>
    <string name="x_hairfies">%d hairfies</string>
    <string name="modify_filters">Modify filters</string>
    <string name="results">Results</string>
    <string name="map">Map</string>
    <string name="title_activity_search_form">SearchFormActivity</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="search_on_hairfie">Search Hairfie</string>
    <string name="nearby_current_location">Nearby current location</string>
    <string name="categories">Categories</string>
    <string name="no_results">No results.</string>
    <string name="cant_locate_name">We can\'t locate %s, please choose a different location</string>
    <string name="cant_locate_you">We can\'t locate you, please choose a location</string>
    <string name="ok">OK</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="x_reviews">%d reviews</string>
    <string name="one_review">1 review</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closed_today">Closed today</string>
    <string name="open_today">Open today</string>
    <string name="title_activity_address">Address</string>
    <string name="call_x">Call %s ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_timetable">TimetableActivity</string>
    <string name="timetable">Time table</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_business_member">BusinessMemberActivity</string>
    <string name="workplace">Work place</string>
    <string name="hairdressers">Hairdressers</string>
    <string name="similar_businesses">Similar Businesses</string>
    <string name="title_activity_hairfie">HairfieActivity</string>
    <string name="share">Share</string>
    <string name="x_hairfie">%s\'s hairfie</string>
    <string name="title_activity_hairfie_picture">HairfiePictureActivity</string>
    <string name="couldnt_guess_type">We couldn\'t guess the type of this file! Please use JPEG or PNG images</string>
    <string name="couldnt_access_camera">We couldn\'t access your device camera.</string>
    <string name="title_activity_hairfie_post">HairfiePostActivity</string>
    <string name="post_hairfie">Post Hairfie</string>
    <string name="post">Post</string>
    <string name="where">Where?</string>
    <string name="who">Who?</string>
    <string name="how_much">How much?</string>
    <string name="add_customer_email">Add your customer\'s email</string>
    <string name="i_did_it">I did it</string>
    <string-array name="where_choice">
        <item>I did it</item>
        <item>Hairdresser in a Salon</item>
    </string-array>
    <string name="title_activity_business_search">BusinessSearchActivity</string>
    <string name="choose_salon">Choose salon</string>
</resources>