<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"

    tools:context="com.hairfie.hairfie.IntroActivity">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="204dp"
        android:id="@+id/view_pager"/>
    
    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="76dp">
            <com.androidpagecontrol.PageControl
                android:id="@+id/page_control"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/login_with_facebook"
            android:onClick="touchFacebook"
            style="@style/AppButton"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:text="@string/signup"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:onClick="touchSignup"
                style="@style/AppButton"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:text="@string/login"
                android:layout_weight="1"
                android:onClick="touchLogin"
                style="@style/AppButton"
                />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:layout_height="34dp"
            android:textColor="#ccFFFFFF"
            android:text="@string/or_skip_for_now"
            android:background="@null"
            android:onClick="touchSkip"
            />


    </LinearLayout>
</FrameLayout>
