<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFe7e7e9"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hairfie.hairfie.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFe7e7e9"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/hairffie_typo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/email"
                    android:textColor="#FFcccccc" />

                <EditText
                    android:id="@+id/email"
                    style="@style/AppTheme.EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#FFcccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/password"
                    android:textColor="#FFcccccc" />

                <EditText
                    android:id="@+id/password"
                    style="@style/AppTheme.EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/forgotten"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:textColor="#FFcccccc"
                    android:onClick="touchForgotten"
                    android:text="@string/forgotten"/>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/login"
            android:onClick="touchLogin"
            style="@style/AppRedButton"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:textColor="#FFcccccc"
            android:text="@string/or_separator"
            android:gravity="center" />

        <Button
            android:id="@+id/facebook_login"
            android:background="@drawable/facebook_button_background"
            android:drawableLeft="@drawable/facebook"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text="@string/login_with_facebook"
            android:onClick="touchFacebook"
            android:textColor="#FFFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:height="44dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="3dp"
            android:textColor="#FFcccccc"
            android:text="@string/dont_worry_facebook"
            android:gravity="center" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>